# bevy-voxel-game

./: Cargo.toml  README.md
assets/: atlas.png~
src/: block.rs  chunk.rs  main.rs  manager.rs  player.rs
