[package]
name = "bevy_voxel_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
enum-as-inner = "0.5.1"
bevy = { version = "0.9.0", features = ["dynamic"] }
bevy-inspector-egui = "0.15.0"
noise = "0.8.2"
itertools = "0.10.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
